--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>GitHub Sample</h1>
   <h2>- Human OKAYAMA -</h2>
   <p>GitHub サンプルページへようこそ！</p>
-  <p>こんにちは！　米倉涼子です。</p>
+  <p>こんにちは！　Britney Spearsです。</p>
 </div>
 </body>
 </html>
