--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="wrap"> 
   <h1>GitHub Sample</h1>
   <h2>- Human OKAYAMA -</h2>
-  <p>GitHub サンプルページへようこそ！</p>
+  <p>GitHub サンプルへようこそ！</p>
   <p>こんにちは！　Britney Spearsです。</p>
 </div>
 </body>
